--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,26 @@
-<app-server></app-server>
-<app-server></app-server>
+<label>Server Name</label>
+<!--<input type="text"-->
+       <!--class="form-control"-->
+       <!--(input)="onUpdateServerName($event)">-->
+<input type="text"
+       class="form-control"
+       [(ngModel)]="serverName">
+<!--<p>{{ serverName }}</p>-->
+<button class="btn btn-primary"
+        [disabled]="!allowNewServer"
+        (click)="onCreateServer()">Add server</button>
+<!--<p [innerText]="allowNewServer"></p>-->
+<!--<p>{{ serverCreationStatus }}</p>-->
+<p *ngIf="serverCreated">Server was created. Name is {{ serverName }}</p>
+<!--<ng-template #noServer>-->
+  <!--<p>No server was created!</p>-->
+<!--</ng-template>-->
+<app-server *ngFor="let server of servers"></app-server>
+
+<hr>
+<button class="btn btn-primary"
+        (click)="onToggleDetails()">Display Details</button>
+<p *ngIf="showSecret">Secret Password = tuna</p>
+<p *ngFor="let logItem of log; let i = index"
+   [ngStyle]="{backgroundColor: i >= 4 ? 'blue' : 'transparent'}"
+   [ngClass]="{'white-text': i >= 4}">{{logItem}}</p>
